...

    <Button
        android:paddingStart="@dimen/marginItemsInSectionSmall"
        android:paddingEnd="@dimen/marginItemsInSectionSmall"
        android:layout_marginBottom="@dimen/marginItemsInSectionLarge"
        android:layout_marginTop="@dimen/marginItemsInSectionSmall"
        android:id="@+id/wakeUpAtFloatingActionButtonExtended"
        android:text="@string/wake_up_at_set_hour_button"
        style="@style/Theme.SleepCycleAlarm.FloatingActionButton"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
...
